--- a/scss/_appTitle.scss
+++ b/scss/_appTitle.scss
@@ -53,6 +53,7 @@
     p {
         margin: 0;
         color: rgb(114, 106, 106);
+        font-size: 13px;
     }
 
     &__value {
