--- a/scss/dashboardComponents/_dashboardCard.scss
+++ b/scss/dashboardComponents/_dashboardCard.scss
@@ -46,18 +46,21 @@
 
   &_links {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(49%, 1fr));
     grid-template-rows: auto;
     padding: 16px;
+    gap: 1px;
+
 
     div {
       height: 40px;
-      border: 1px solid rgb(224, 224, 224);
+      outline: 1px solid rgb(224, 224, 224);
       display: flex;
       justify-content: center;
       align-items: flex-start;
       flex-direction: column;
       padding: 0 16px;
+      color: gray;
     }
   }
 }
