--- a/scss/dashboardComponents/_dashboardCardsContainer.scss
+++ b/scss/dashboardComponents/_dashboardCardsContainer.scss
@@ -12,6 +12,7 @@
     grid-template-rows: min-content;
     gap: 16px;
     padding: 16px;
+    padding-top: 0;
 
     /* make the scrollbar visible and easy to notice across browsers */
     position: relative;
