--- a/scss/dashboardComponents/_dashboardCardsTitle.scss
+++ b/scss/dashboardComponents/_dashboardCardsTitle.scss
@@ -1,5 +1,5 @@
 .cardsTitle {
-    padding: 16px 24px 0;
+    padding: 16px 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
